<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.ucsd.team6flashbackplayer.MainActivity"
    tools:showIn="@layout/activity_main">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineL10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineR10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/fb_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:background="@drawable/fb_disabled"
        android:text="@string/flashback"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/main_songs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/black_frame"
        android:text="@string/songs"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/current_song"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintVertical_bias="0.4"/>
    <Button
        android:id="@+id/main_albums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/black_frame"
        android:text="@string/albusms"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintTop_toBottomOf="@id/main_songs"
        app:layout_constraintVertical_bias="0.1"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/current_song"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_albums"
        app:layout_constraintVertical_bias="0.9"/>

    <TextView
        android:id="@+id/signed_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/current_song"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_albums"
        app:layout_constraintVertical_bias="0.9"/>

    <include layout="@layout/current_song"
        android:id="@+id/current_song"/>

</android.support.constraint.ConstraintLayout>