...
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL48"
        app:layout_constraintRight_toRightOf="@id/guidelineR48"
        app:layout_constraintTop_toBottomOf="@id/curr_playing"/>

    <TextView
        android:id="@+id/curr_playing_name"
        android:layout_height="35dp"
        android:layout_width="0dp"
        android:gravity="center"
        android:text="---"
        android:textColor="#000000"
        app:layout_constraintRight_toRightOf="@id/guidelineL48"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/curr_playing"/>

    <TextView
        android:id="@+id/curr_playing_artist"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="---"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="@id/guidelineR48"
...
