...
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/song_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/curr_page_margin"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever"
...
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintTop_toBottomOf="@id/fb_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/song_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/curr_page_margin"
        android:textSize="15sp"
        android:textColor="#000000"
        android:singleLine="true"
...
