<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineL10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineR10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/fb_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:background="@drawable/fb_disabled"
        android:text="@string/flashback"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <ListView
        android:id="@+id/song_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@id/fb_button"
        app:layout_constraintBottom_toTopOf="@id/current_song">
    </ListView>

    <include layout="@layout/current_song"
        android:id="@+id/current_song"/>

</android.support.constraint.ConstraintLayout>